fix: flex classes in topic info to eliminate spacing issues due to whitespace in html

--- a/scss/topic.scss
+++ b/scss/topic.scss
@@ -10,5 +10,10 @@
 		color: $gray-700;
 		font-weight: 600;
 		font-size: 12px;
+
+		span.hidden-xs {
+			font-weight: normal;
+			text-transform: lowercase;
+		}
 	}
 }
